--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Facebook OAuth
-PUBLIC_FACEBOOK_APP_ID=your_facebook_app_id_here
-
 # Google OAuth
 PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id_here
+
+# Google Sheets Web App URL (from Apps Script deployment)
+PUBLIC_GOOGLE_SHEETS_URL=your_google_sheets_web_app_url_here
